[gd_scene load_steps=4 format=3 uid="uid://diucfqkkhan04"]

[ext_resource type="FontFile" uid="uid://dvi6fokkws0s0" path="res://fonts/hell_font.ttf" id="1_8ne30"]
[ext_resource type="Script" path="res://scripts/autoloads/debug_menu.gd" id="1_foh1m"]

[sub_resource type="LabelSettings" id="LabelSettings_yxsle"]
font = ExtResource("1_8ne30")
font_size = 8

[node name="debug_menu" type="CanvasLayer"]
script = ExtResource("1_foh1m")

[node name="interface" type="Node2D" parent="."]
visible = false

[node name="frames_per_second" type="Label" parent="interface"]
offset_left = 1.0
offset_top = 1.0
offset_right = 40.0
offset_bottom = 12.0
text = "FPS: 00"
label_settings = SubResource("LabelSettings_yxsle")

[node name="coords_x" type="Label" parent="interface"]
offset_left = 1.0
offset_top = 10.0
offset_right = 109.0
offset_bottom = 21.0
text = "COORDS-X: 9999"
label_settings = SubResource("LabelSettings_yxsle")

[node name="coords_y" type="Label" parent="interface"]
offset_left = 1.0
offset_top = 19.0
offset_right = 109.0
offset_bottom = 30.0
text = "COORDS-Y: 9999"
label_settings = SubResource("LabelSettings_yxsle")

[node name="hp" type="Label" parent="interface"]
offset_left = 1.0
offset_top = 28.0
offset_right = 109.0
offset_bottom = 39.0
text = "HP: 15.0"
label_settings = SubResource("LabelSettings_yxsle")
